Update team member names in index.html

--- a/index.html
+++ b/index.html
@@ -984,27 +984,27 @@
             <div class="team-grid" style="margin-top:2rem;">
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
-                    <h4>Member 1</h4>
+                    <h4>Shubham Nemade</h4>
                     <p>Prototype</p>
                 </div>
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
-                    <h4>Member 2</h4>
+                    <h4>Atharva Karale</h4>
                     <p>Prototype</p>
                 </div>
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
-                    <h4>Member 3</h4>
+                    <h4>Sanskruti Dahiphale</h4>
                     <p>Research</p>
                 </div>
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
-                    <h4>Member 4</h4>
+                    <h4>Sanskruti Dongare</h4>
                     <p>Slides</p>
                 </div>
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
-                    <h4>Member 5</h4>
+                    <h4>Shravani Mane</h4>
                     <p>Slides</p>
                 </div>
             </div>
