--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
                     <h4>Sanskruti Dongare</h4>
-                    <p>Slides</p>
+                    <p>Research</p>
                 </div>
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
