Add student IDs to team member names

--- a/index.html
+++ b/index.html
@@ -984,28 +984,28 @@
             <div class="team-grid" style="margin-top:2rem;">
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
-                    <h4>Shubham Nemade</h4>
+                    <h4>123B1B020 - Shubham Nemade</h4>
                     <p>Prototype</p>
                 </div>
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
-                    <h4>Atharva Karale</h4>
+                    <h4>123B1B012 - Atharva Karale</h4>
                     <p>Prototype</p>
                 </div>
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
-                    <h4>Sanskruti Dahiphale</h4>
+                    <h4>123B1B007 - Sanskruti Dahiphale</h4>
                     <p>Research</p>
                 </div>
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
-                    <h4>Sanskruti Dongare</h4>
+                    <h4>123B1B010 - Sanskruti Dongare</h4>
                     <p>Research</p>
                 </div>
                 <div class="team-member">
                     <div class="team-avatar">👤</div>
-                    <h4>Shravani Mane</h4>
-                    <p>Slides</p>
+                    <h4>123B1B018 - Shravani Mane</h4>
+                    <p>Research</p>
                 </div>
             </div>
 
