Simplify reference list in index.html
Updated reference list to remove video links and simplify entries.

--- a/index.html
+++ b/index.html
@@ -970,14 +970,14 @@
             <h2 class="section-head">References & <span class="gradient">Thank You</span></h2>
             <p class="section-sub">Resources that informed our project.</p>
             <ul class="ref-list">
-                <li>📹 Video 1 — <a href="#">AI in UX Design: How Personalization is Changing Interfaces</a></li>
-                <li>📹 Video 2 — <a href="#">Building Adaptive Learning Systems with ML</a></li>
-                <li>📹 Video 3 — <a href="#">Full Workflow: AI-Driven UX Personalization</a></li>
+                <li>AI in UX Design: How Personalization is Changing Interfaces</li>
+                <li>Building Adaptive Learning Systems with ML</li>
+                <li>Full Workflow: AI-Driven UX Personalization</li>
                 <li>📄 Nielsen Norman Group — <a
                         href="https://www.nngroup.com/articles/personalization/">Personalization vs. Customization in
                         UX</a></li>
-                <li>📄 IEEE — <a href="#">Adaptive Learning Environments: A Survey</a></li>
-                <li>📄 GDPR / FERPA — <a href="#">Educational Data Privacy Regulations</a></li>
+                <li>📄 IEEE — Adaptive Learning Environments: A Survey</li>
+                <li>📄 GDPR / FERPA — Educational Data Privacy Regulations</li>
                 <li>🛠️ Tools Used — Figma, HTML/CSS/JS, Inter Font (Google Fonts)</li>
             </ul>
 
